--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,16 +10,19 @@
             "request": "launch",
             "program": "/gem5/build/ARM/gem5.opt",
             "args": [
+                "-d",
+                "m5out/$TIMESTAMP/",
                 "configs/example/fs.py",
                 "--kernel=$M5_PATH/binaries/vmlinux.arm64",
                 "--disk-image=$M5_PATH/ubuntu-18.04-arm64-docker.img",
                 "--dtb-file=./system/arm/dt/armv8_gem5_v1_1cpu.dtb",
                 "--bootloader=$M5_PATH/binaries/boot.arm64",
-                "--script=$M5_PATH/benchmarks/CPU2006/462.libquantum/462.libquantum.rcS",
                 "--cpu-type=O3_ARM_v7a_3",
                 "--caches",
                 "-r",
-                "1"
+                "1",
+                "--checkpoint-dir=m5out_ckpt/",
+                "--script=$M5_PATH/benchmarks/CPU2006/462.libquantum/462.libquantum.rcS"
             ],
             "stopAtEntry": false,
             "cwd": "/gem5",
@@ -27,6 +30,10 @@
                 {
                     "name": "M5_PATH",
                     "value": "/gem5-full-system-files"
+                },
+                {
+                    "name": "TIMESTAMP",
+                    "value": "$(date +%Y%d%m_%H%M%S)"
                 }
             ],
             "externalConsole": false,
